apps/deluge/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deluge
spec:
  selector:
    matchLabels:
      app: deluge
  replicas: 1
  template:
    metadata:
      labels:
        app: deluge
    spec:
      containers:
        - name: deluge
          image: binhex/arch-delugevpn:2.1.1-4-09
          ports:
            - containerPort: 8112
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
            privileged: true # required for wireguard
          volumeMounts:
            - name: data
              mountPath: /config
            - name: downloads
              mountPath: /mnt/tank/Downloads
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: deluge
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads-pvc
