apps/deluge/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: default-internal-network-only@kubernetescrd
spec:
  rules:
    - host: deluge.internal.neils.house
      http:
        paths:
          - backend:
              service:
                name: deluge
                port:
                  number: 8112
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - deluge.internal.neils.house
